# sendIR-RPi

./: CMakeLists.txt  Makefile  README.md  sendIR2.c
src/: sendIR.c  sendIR2.c
